bridge/base/turtle-identifier-service.yaml
# check if there is at least one published port

#! turtle-identifier-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: turtle-identifier-published
    namespace: proof-of-concept-demo
    labels:
        com.docker.compose.project: proof-of-concept-demo
        com.docker.compose.service: turtle-identifier
spec:
    selector:
        com.docker.compose.project: proof-of-concept-demo
        com.docker.compose.service: turtle-identifier
    ports:
        - name: turtle-ide-3000
          port: 3000
          protocol: TCP
          targetPort: turtle-ide-3000
